feat: css reset, automatically close stream after 1 second

--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>getUserMedia Tests</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
-
 <main>
-
-
   <h1>getUserMedia tests</h1>
   <p>Utilities for debugging getUserMedia APIs</p>
   <ul>
     <li><a href="device-enumeration.html">Device enumeration</a></li>
   </ul>
 </main>
-
 </body>
 </html>
