--- a/device-enumeration.html
+++ b/device-enumeration.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Device Enumeration</title>
-
     <script src="js/device-enumeration.js" type="module"></script>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
 
@@ -41,6 +42,8 @@
         <button id="enumerate-devices">Enumerate devices</button>
         <button id="get-user-media">getUserMedia(video)</button>
     </div>
+
+    <video id="video" autoplay muted></video>
 </main>
 
 </body>
