feat: add QR Code for easy access from mobile devices

--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
 </head>
 <body>
 <main>
-  <h1>getUserMedia tests</h1>
-  <p>Utilities for debugging getUserMedia APIs</p>
-  <ul>
-    <li><a href="device-enumeration.html">Device enumeration</a></li>
-  </ul>
+    <h1>getUserMedia tests</h1>
+    <p>Utilities for debugging getUserMedia APIs</p>
+    <ul>
+        <li><a href="device-enumeration.html">Device enumeration</a></li>
+    </ul>
+
+
+    <h1>QR Code</h1>
+    <p>Use this QR Code for easy access with a smartphone.</p>
+
+    <img src="img/qrcode.png" alt="QR Code" width="296" height="296">
 </main>
 </body>
 </html>
